Revision history for perl distribution Mojo-Redis

3.08 Not Released
 - Add benchmark test #3
 - Fix geopos return value
 - Fix return values in documentation

3.07 2018-07-12T09:59:05+0800
 - Add support for sending custom commands #18
 - Fix documentation issues
 - Will not enqueue connections if url() has changed

3.06 2018-07-11T11:00:01+0800
 - Fix processing exec() result
 - Improved example applications and add references from the POD

3.05 2018-07-11T10:24:59+0800
 - Fix holding $db in memory when issuing commands and returning promises
 - Add info_structured() method to Mojo::Redis::Database
 - Add example of Mojolicious application using Mojo::Redis::Cache

3.04 2018-07-11T09:24:09+0800
 - Add server commands #4
 - Add stream commands #6
 - Add support for keyspace notifications #10
 - Documented how pipelining works #7

3.03 2018-07-05T11:45:01+0800
 - Add eval(), evalsha() and script() #8
 - Cannot have a custom class for transactions #14

3.02 2018-07-01T18:24:37+0900
 - Add Mojo::Redis::Cache->memomize_p()
 - Add examples/twitter.pl
 - Add UTF-8 encoding as default and allow encoding to be changed #1
 - Add documentation for events #2
 - Add support for connecting to unix socket #12
 - Add support for offline cache #15
 - Add support for refreshing cache #16

3.01 2018-06-28T15:22:47+0900
 - Add Mojo::Redis::Cache
 - Add examples/chat.pl

3.00 2018-06-28T10:11:24+0900
 - Started on a new version to replace Mojo::Redis2 and the old Mojo::Redis
 - Mojo::Redis as EXPERIMENTAL
 - Add connection pool
 - Add Mojo::Redis::Cursor
 - Add Mojo::Redis::Database
 - Add Mojo::Redis::PubSub
 - Add Mojo::Redis::Transaction