@@ -2,8 +2,11 @@ Revision history for perl distribution Mojo-Redis
 
 3.08 Not Released
  - Add benchmark test #3
- - Fix geopos return value
- - Fix return values in documentation
+ - Fix cache() need to use Protocol::Redis because of binary data
+ - Fix GEOPOS return value
+ - Fix only decode response data if defined #19
+ - Fix do not create new connection objects during global destruction
+ - Improved return values in documentation
 
 3.07 2018-07-12T09:59:05+0800
  - Add support for sending custom commands #18
